<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/text_view_author_name"
        android:textAppearance="@style/TextViewBase"
        android:textColor="@color/colorDarkGray"
        app:layout_constraintBottom_toTopOf="@+id/editTextAuthorName"
        app:layout_constraintStart_toStartOf="@+id/editTextAuthorName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_view_author_address"
        android:textAppearance="@style/TextViewBase"
        android:textColor="@color/colorDarkGray"
        app:layout_constraintStart_toStartOf="@+id/editTextAuthorName"
        app:layout_constraintTop_toBottomOf="@+id/editTextAuthorName" />

    <EditText
        android:id="@+id/editTextAuthorName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/hint_author_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAppearance="@style/EditTextBase"
        android:textColor="@color/colorDarkGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextAuthorAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/hint_author_address"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textAppearance="@style/EditTextBase"
        android:textColor="@color/colorDarkGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>