<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorGitHubWhite"
    android:filterTouchesWhenObscured="false"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#FFEFC8"
        app:cardCornerRadius="4dp"
        android:layout_margin="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFEFC8">

            <ImageView
                android:id="@+id/imageViewBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_book_description"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_add_image" />

            <TextView
                android:id="@+id/textViewBookName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/hint_book_name"
                android:textAppearance="@style/TextViewBookName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewBook" />

            <TextView
                android:id="@+id/textViewBookRetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/hint_book_cost"
                android:textAppearance="@style/TextViewBookRetail"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageButtonDelteBook"
                app:layout_constraintStart_toStartOf="@+id/textViewBookName"
                app:layout_constraintTop_toBottomOf="@+id/textViewBookName" />

            <ImageButton
                android:id="@+id/imageButtonDelteBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFEFC8"
                android:contentDescription="@string/image_button_delete_book_description"
                app:layout_constraintBottom_toBottomOf="@+id/textViewBookRetail"
                app:layout_constraintEnd_toEndOf="@+id/textViewBookName"
                app:layout_constraintTop_toTopOf="@+id/textViewBookRetail"
                app:srcCompat="@drawable/ic_delete_forever_black_27dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>